# dont_hurt_me_GJD

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  README.md  etf_compare.py  etf_db.py  etf_trend.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: .gitignore  requirements.txt
backend/app/: __init__.py  models.py
backend/app/routes/: __init__.py  auth.py  etf.py  health.py
backend/scripts/: init_db.py  migrate_data.py
data/: etf_510300_vs_index.html
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/assets/: index-CVm7JR0K.js  index-D0BH5l_J.css
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.css  Layout.tsx
frontend/src/pages/Compare/: Compare.css  Compare.tsx
frontend/src/pages/Dashboard/: Dashboard.css  Dashboard.tsx
frontend/src/pages/Ranking/: Ranking.css  Ranking.tsx
frontend/src/pages/Trend/: Trend.css  Trend.tsx
frontend/src/services/: api.ts
scripts/: etf_compare.py  etf_trend.py  huijin_analysis.py  huijin_etf.py
skills/etf/: SKILL.md
src/etf/: __init__.py  cli.py  database.py  fetcher.py  fetcher_holders.py  fetcher_szse.py  queries.py
