[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-analysis"
version = "0.1.0"
description = "ETF份额数据分析工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "urllib3",
    "chinese_calendar",
]

[project.optional-dependencies]
dev = []

[project.scripts]
etf = "src.etf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src.etf*"]
